# datapulse

./: .gitignore  LICENSE  README.md  pyproject.toml
.datapulse/: catalog.json
.github/workflows/: ci.yml
data/: sales.csv  sales_feb.csv  sales_jan.csv  sales_mar.csv
datapulse/: cli.py  engine.py  notebook.py  pyproject.toml
datapulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
datapulse/src/datapulse/: __init__.py
notebooks/: analysis.ipynb  last_result.csv  revenue_top5.ipynb
tests/: test_engine_smoke.py
