[project]
name = "datapulse"
version = "0.1.0"
description = "DataPulse: Natural language data explorer with Codex CLI + GPT-5"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "pandas",
    "duckdb",
    "rich",
    "matplotlib",
    "jupyterlab",
    "nbformat",
    "ipykernel",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
datapulse = "datapulse.cli:cli"

[tool.setuptools]
packages = ["datapulse"]

