[project]
name = "datapulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sreeprasad govindankutty", email = "sreeprasad.sp@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
datapulse = "datapulse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
